--- a/src/components/UI/Button/Button.css
+++ b/src/components/UI/Button/Button.css
@@ -8,6 +8,7 @@
     padding: 10px;
     margin: 10px;
     font-weight: bold;
+    font-size: 24px
 }
 
 .Button:first-of-type {
@@ -16,9 +17,13 @@
 }
 
 .Success {
-    color: #5C9210;
+    color: rgba(27, 115, 173, 0.877);
 }
 
 .Danger {
-    color: #944317;
+    color:rgba(153, 2, 2, 0.808);
+}
+
+.Normal {
+    color:rgb(131, 131, 131);
 }
